crates/graph/tests/compile-fail/02-uninitialized-let.stderr
error: custom attribute panicked
 --> tests/compile-fail/02-uninitialized-let.rs:3:1
  |
3 | #[workflow]
  | ^^^^^^^^^^^
  |
  = help: message: Only simple idents are supported in let bindings
